<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sugoilabs.fitko.Profile">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/occupation_header"
                    android:textSize="20dp"
                    android:textColor="@color/material_blue_grey_800"
                    android:layout_marginBottom="5dp"
                    />

                <!--Put form controls here-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/Occupation"
                    android:layout_marginBottom="5dp"
                    />

                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_title"
                    />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!--Put form controls here-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/PhyActivity"
                    android:layout_marginBottom="5dp"
                    />

                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/PhyActivity_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_title"
                    />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!--Put form controls here-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/Stress"
                    android:layout_marginBottom="5dp"
                    />

                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/Stress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_title"
                    />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!--Put form controls here-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/StressPersonal"
                    android:layout_marginBottom="5dp"
                    />

                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/StressPersonal_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_title"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/Sleep_header"
                android:textSize="20dp"
                android:textColor="@color/material_blue_grey_800"
                android:layout_marginBottom="5dp"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/SleepQty"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/Sleep_Quality"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/AvgSleepHr"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/SleepTm"
                    android:layout_marginBottom="5dp"
                    />

                <EditText
                    android:id="@+id/SleepTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/Habbit_header"
                android:textSize="20dp"
                android:textColor="@color/material_blue_grey_800"
                android:layout_marginBottom="5dp"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/Smoke"
                    android:layout_marginBottom="5dp"
                    />

                <RadioGroup
                    android:id="@+id/radioSmoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioSmokeYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Yes"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioSmokeNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/No" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/Tobacco"
                    android:layout_marginBottom="5dp"
                    />

                <RadioGroup
                    android:id="@+id/radioTobacco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioTobaccoYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Yes"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioTobaccoNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/No" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/Alcohol"
                    android:layout_marginBottom="5dp"
                    />

                <RadioGroup
                    android:id="@+id/radioAlcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioAlcoholYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Yes"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioAlcoholNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/No" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/Exercise_header"
                android:textSize="20dp"
                android:textColor="@color/material_blue_grey_800"
                android:layout_marginBottom="5dp"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/IfExercising"
                    android:layout_marginBottom="5dp"
                    />

                <RadioGroup
                    android:id="@+id/radioIfExercising"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioIfExercisingYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Yes"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioIfExercisingNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/No" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!--Put form controls here-->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/DaysExercising"
                    android:layout_marginBottom="5dp"
                    />

                <!-- Spinner Element -->
                <Spinner
                    android:id="@+id/DaysExercising_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/DaysExercising"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
